Buildsystem update for newever code

--- a/src/kits/locale/CMakeLists.txt
+++ b/src/kits/locale/CMakeLists.txt
@@ -1,3 +1,30 @@
 target_sources(be PRIVATE
-
+	Catalog.cpp
+	CatalogData.cpp
+	CatalogStub.cpp
+	cat.cpp
+	Collator.cpp
+	Country.cpp
+	DateFormat.cpp
+	DateTimeFormat.cpp
+	DefaultCatalog.cpp
+	DurationFormat.cpp
+	EditableCatalog.cpp
+	Format.cpp
+	FormattingConventions.cpp
+	HashMapCatalog.cpp
+	InitLocaleKit.cpp
+	Language.cpp
+	Locale.cpp
+	LocaleRoster.cpp
+	LocaleRosterData.cpp
+	MutableLocaleRoster.cpp
+	NumberFormat.cpp
+	RelativeDateTimeFormat.cpp
+	StringFormat.cpp
+	TextEncoding.cpp
+	TimeFormat.cpp
+	TimeUnitFormat.cpp
+	TimeZone.cpp
+	UnicodeChar.cpp
 )
