--- a/src/kits/locale/CMakeLists.txt
+++ b/src/kits/locale/CMakeLists.txt
@@ -1,16 +1,12 @@
+
 target_sources(be PRIVATE
+	cat.cpp
 	Catalog.cpp
 	CatalogData.cpp
-	CatalogStub.cpp
-	cat.cpp
 	Collator.cpp
 	Country.cpp
-	DateFormat.cpp
-	DateTimeFormat.cpp
 	DefaultCatalog.cpp
-	DurationFormat.cpp
 	EditableCatalog.cpp
-	Format.cpp
 	FormattingConventions.cpp
 	HashMapCatalog.cpp
 	InitLocaleKit.cpp
@@ -19,12 +15,28 @@ target_sources(be PRIVATE
 	LocaleRoster.cpp
 	LocaleRosterData.cpp
 	MutableLocaleRoster.cpp
-	NumberFormat.cpp
-	RelativeDateTimeFormat.cpp
-	StringFormat.cpp
 	TextEncoding.cpp
+	TimeZone.cpp
+	DateFormat.cpp
+	DateTimeFormat.cpp
+	DurationFormat.cpp
+	NumberFormat.cpp
+	StringFormat.cpp
 	TimeFormat.cpp
 	TimeUnitFormat.cpp
-	TimeZone.cpp
+	Format.cpp
 	UnicodeChar.cpp
+	RelativeDateTimeFormat.cpp
 )
+
+
+AddOn(
+	localestub
+	STATIC
+
+	SOURCES
+	CatalogStub.cpp
+	LIBS icu
+)
+
+UsePrivateHeaders( localestub locale )
