Add HVIF translator * Move translation kit to libtranslation * Install the add-on in the image

--- a/src/kits/translation/CMakeLists.txt
+++ b/src/kits/translation/CMakeLists.txt
@@ -1,7 +1,13 @@
-target_sources(be PRIVATE
+AddOn(
+	translation
+	SHARED
+
+	SOURCES
 	BitmapStream.cpp
 	FuncTranslator.cpp
 	TranslationUtils.cpp
 	Translator.cpp
 	TranslatorRoster.cpp
 )
+
+UsePrivateHeaders(translation textencoding)
