Move textencoding to separate library.
* Fixes #54.

--- a/src/kits/translation/CMakeLists.txt
+++ b/src/kits/translation/CMakeLists.txt
@@ -8,6 +8,7 @@ AddOn(
 	TranslationUtils.cpp
 	Translator.cpp
 	TranslatorRoster.cpp
+	LIBS textencoding
 )
 
 UsePrivateHeaders(translation textencoding)
