Synchronize icu version, remove custom lib

--- a/src/kits/locale/CMakeLists.txt
+++ b/src/kits/locale/CMakeLists.txt
@@ -1,4 +1,6 @@
 
+find_package(ICU REQUIRED COMPONENTS i18n uc dt in io)
+
 target_sources(be PRIVATE
 	cat.cpp
 	Catalog.cpp
@@ -36,7 +38,7 @@ AddOn(
 
 	SOURCES
 	CatalogStub.cpp
-	LIBS icu
+	LIBS ${ICU_LIBRARIES}
 )
 
 UsePrivateHeaders( localestub locale )
